--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Wesley Teo
-description: Welcome to my page! Thanks for visiting!
+description: Data Analytics, Statistical Analysis, Machine Learning
